ajout css header

--- a/index.html
+++ b/index.html
@@ -4,29 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beauvoir Shoes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <!-- PARTIE 1-->
         <div>
             <!--logo:une iconne fontawesome-->
-            <i class="fa-solid fa-shoe-prints"></i> 
+            <d id="part1">
+            <i  id="logo" class="fa-solid fa-shoe-prints"></i> 
             <!-- le nom du site-->
             <h1>Beauvoir Shoes</h1>
             <!--liens sociaux-->
-            <div id="social_link">
-                <p>Retrouvez-nous sur</p>
+            <div id="social_links">
+                <p>Retrouvez-nous sur :</p>
                 <ul>
                     <li><a href=""><i class="fa-brands fa-facebook"></i></a></li>
                     <li><a href=""><i class="fa-brands fa-twitter"></i></a></li>
                     <li><a href=""><i class="fa-brands fa-tiktok"></i></a></li>
                 </ul>
             </div>
-
         </div>
-
     </header>
-    
 </body>
 <script src="https://kit.fontawesome.com/bcf2eba2ab.js" crossorigin="anonymous"></script>
 </html>
